--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 			"packages/*",
 			"plugins/*"
 		],
-		"version": "0.0.0"
+		"version": "0.0.0",
+		"useWorkspaces": true
 	},
 	"config": {
 		"commitizen": {
