chore(configs/linters): Added eslint-react-plugin

--- a/configs/linters/.eslintrc.json
+++ b/configs/linters/.eslintrc.json
@@ -9,5 +9,5 @@
 	"rules": {
 		"no-unused-vars": "warn"
 	},
-	"extends": ["eslint:recommended"]
+	"extends": ["eslint:recommended", "plugin:react/recommended"]
 }
