--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"commitizen": "^4.2.2",
 		"cz-customizable": "^6.3.0",
 		"eslint": "^7.12.1",
+		"eslint-plugin-react": "^7.21.5",
 		"husky": "^4.3.0",
 		"lerna": "^3.22.1",
 		"lint-staged": "^10.5.1",
