--- a/configs/linters/.eslintrc.json
+++ b/configs/linters/.eslintrc.json
@@ -1,13 +1,27 @@
 {
 	"parserOptions": {
-		"ecmaVersion": 2021
+		"ecmaVersion": 2021,
+		"sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
 	},
 	"env": {
 		"es6": true,
-		"node": true
+		"node": true,
+		"browser": true
 	},
 	"rules": {
-		"no-unused-vars": "warn"
+		"no-unused-vars": "warn",
+		"semi": ["error", "never"],
+		"max-len": ["warn", {"code": 120}],
+		"quotes": ["error", "single"],
+		"jsx-quotes": ["error", "prefer-single"],
+		"quote-props": ["error", "as-needed"],
+		"comma-dangle": ["error", "never"],
+		"object-curly-spacing": ["error", "always"],
+		"array-bracket-spacing": ["error", "never"],
+		"arrow-parens": ["error", "as-needed"]
 	},
 	"extends": ["eslint:recommended", "plugin:react/recommended"]
 }
