--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,4 +1,26 @@
 {
 	"name": "@stream-viewer/frontend",
-	"version": "1.0.0"
+	"version": "1.0.0",
+	"dependencies": {
+		"prop-types": "^15.7.2",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-scripts": "^4.0.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
